# Transient-Fault-Resiliency-using-Selective-Instruction-Duplication

./: CMakeLists.txt  README.md
TFR/: CMakeLists.txt  TFR.cpp
benchmarks/: default.profraw  final_sample.bc  final_sample.c  final_sample.none.bc  final_sample.prof.bc  final_sample.profdata  final_sample.tfr.bc  final_sample.tfrand.bc  final_sample.tfrmin.bc  final_sample2.c  final_sample2.none.bc  final_sample2.tfr.bc  final_sample2.tfrand.bc  final_sample2.tfrmin.bc  final_sample3.c  final_sample3.none.bc  final_sample3.tfr.bc  final_sample3.tfrand.bc  final_sample3.tfrmin.bc  final_sample4.c  final_sample4.none.bc  final_sample4.tfr.bc  final_sample4.tfrand.bc  final_sample4.tfrmin.bc  final_sample_no_tfr  final_sample_prof  final_sample_tfr  run.sh  sample.c  sample.profdata  sample2.c  sample2.profdata  sample2_no_tfr  sample2_prof  sample2_tfr  sample3.c  sample3.profdata  sample3_no_tfr  sample3_prof  sample3_tfr  (+8 more)
